kubernetes/etcd-state.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  namespace: cicd
spec:
  serviceName: "etcd-service"
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
        - name: etcd
          image: quay.io/coreos/etcd:v3.5.0
          ports:
            - containerPort: 2379
          command:
            - /usr/local/bin/etcd
            - --advertise-client-urls=http://etcd-0.etcd-service:2379
            - --listen-client-urls=http://0.0.0.0:2379
