kubernetes/etcd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: etcd-service
  namespace: cicd
spec:
  ports:
    - port: 2379
      targetPort: 2379
  selector:
    app: etcd
