kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mongodb
spec:
  ports:
    - port: 27017
      name: mongo
  clusterIP: None
  selector:
    app: mongo
